[package]
name    = "smrk_guegap_near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.1", features = ["legacy"] }
sha2     = { version = "0.10", default-features = false }
hex      = { version = "0.4",  default-features = false, features = ["alloc"] }

[profile.release]
codegen-units = 1
opt-level     = "z"   # minimise wasm size
lto           = true
debug         = false
panic         = "abort"
